Note's section is up and running, made some changes in the UI

--- a/popup.html
+++ b/popup.html
@@ -4,24 +4,7 @@
 <head>
     <title>A New Way Of Note Taking</title>
 
-    <style>
-        body {
-            width: 300px;
-            min-height: 200px;
-            padding: 10px;
-        }
-        
-        .url-list {
-            list-style-type: none;
-            padding: 0;
-            max-height: 250px;
-            overflow-y: auto;
-        }
-        
-        .url-list-item {
-            margin-bottom: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="popup.css">
 
     <script src="popup.js"></script>
 </head>
